--- a/odoo-custom-addons/fibernet/views/sequence.xml
+++ b/odoo-custom-addons/fibernet/views/sequence.xml
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <odoo>
 	<data>
-
-
-
+		<record model="ir.sequence" id="seq_fibernet_corp_cust_id">
+			<field name="name">Corporate Client ID</field>
+			<field name="code">cust_cid_code</field>
+			<field name="prefix">NIP</field>
+			<field name="padding">4</field>
+			<field name="company_id" eval="False" />
+    	</record>
 	</data>
 </odoo>
